--- a/pages/19457.html
+++ b/pages/19457.html
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8587/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8587/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -390,7 +390,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>The concept of <em>enriched adjunction</em> is the generalization of that of <a class='existingWikiWord' href='/nlab/show/adjoint+functor'>adjoint functors</a> (<a class='existingWikiWord' href='/nlab/show/adjunction'>adjunctions</a> in <a class='existingWikiWord' href='/nlab/show/Cat'>Cat</a>) from <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a> to <a class='existingWikiWord' href='/nlab/show/enriched+category+theory'>enriched category theory</a>.</p>
@@ -402,8 +402,8 @@ margin-left: 0em;
 
 <p><strong>(enriched adjunction)</strong></p>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_56f79d6c522c9073a0a7ef0c9e4adb218114ff89_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/closed+monoidal+category'>closed</a> <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal category</a> with all <a class='existingWikiWord' href='/nlab/show/limit'>limits</a> and <a class='existingWikiWord' href='/nlab/show/colimit'>colimits</a>, let <math class='maruku-mathml' display='inline' id='mathml_56f79d6c522c9073a0a7ef0c9e4adb218114ff89_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_56f79d6c522c9073a0a7ef0c9e4adb218114ff89_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>\mathcal{D}</annotation></semantics></math> be two <math class='maruku-mathml' display='inline' id='mathml_56f79d6c522c9073a0a7ef0c9e4adb218114ff89_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched categories</a>. Then an <em><a class='existingWikiWord' href='/nlab/show/adjunction'>adjoint pair</a> of <math class='maruku-mathml' display='inline' id='mathml_56f79d6c522c9073a0a7ef0c9e4adb218114ff89_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+functor'>enriched functors</a></em> or <em>enriched adjunction</em></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_56f79d6c522c9073a0a7ef0c9e4adb218114ff89_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi><munderover><mo>⊥</mo><munder><mo>⟶</mo><mi>R</mi></munder><mover><mo>⟵</mo><mi>L</mi></mover></munderover><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_d002da243731059d2b1e29b6640ba8a834240c34_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/closed+monoidal+category'>closed</a> <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal category</a> with all <a class='existingWikiWord' href='/nlab/show/limit'>limits</a> and <a class='existingWikiWord' href='/nlab/show/colimit'>colimits</a>, let <math class='maruku-mathml' display='inline' id='mathml_d002da243731059d2b1e29b6640ba8a834240c34_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_d002da243731059d2b1e29b6640ba8a834240c34_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>\mathcal{D}</annotation></semantics></math> be two <math class='maruku-mathml' display='inline' id='mathml_d002da243731059d2b1e29b6640ba8a834240c34_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched categories</a>. Then an <em><a class='existingWikiWord' href='/nlab/show/adjunction'>adjoint pair</a> of <math class='maruku-mathml' display='inline' id='mathml_d002da243731059d2b1e29b6640ba8a834240c34_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+functor'>enriched functors</a></em> or <em>enriched adjunction</em></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d002da243731059d2b1e29b6640ba8a834240c34_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi><munderover><mo>⊥</mo><munder><mo>⟶</mo><mi>R</mi></munder><mover><mo>⟵</mo><mi>L</mi></mover></munderover><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>
   \mathcal{C}
     \underoverset
       {\underset{R}{\longrightarrow}}
@@ -412,8 +412,8 @@ margin-left: 0em;
   \mathcal{D}
 
 </annotation></semantics></math></div>
-<p>is a <a class='existingWikiWord' href='/nlab/show/pair'>pair</a> of <math class='maruku-mathml' display='inline' id='mathml_56f79d6c522c9073a0a7ef0c9e4adb218114ff89_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+functor'>enriched functors</a>, as shown, such that there is a <math class='maruku-mathml' display='inline' id='mathml_56f79d6c522c9073a0a7ef0c9e4adb218114ff89_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+natural+transformation'>enriched natural isomorphism</a> between <a class='existingWikiWord' href='/nlab/show/enriched+hom-functor'>enriched hom-functors</a> of the form</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_56f79d6c522c9073a0a7ef0c9e4adb218114ff89_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi><mo stretchy='false'>(</mo><mi>L</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>≃</mo><mspace width='thickmathspace'></mspace><mi>𝒟</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mi>R</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>is a <a class='existingWikiWord' href='/nlab/show/pair'>pair</a> of <math class='maruku-mathml' display='inline' id='mathml_d002da243731059d2b1e29b6640ba8a834240c34_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+functor'>enriched functors</a>, as shown, such that there is a <math class='maruku-mathml' display='inline' id='mathml_d002da243731059d2b1e29b6640ba8a834240c34_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+natural+transformation'>enriched natural isomorphism</a> between <a class='existingWikiWord' href='/nlab/show/enriched+hom-functor'>enriched hom-functors</a> of the form</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d002da243731059d2b1e29b6640ba8a834240c34_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi><mo stretchy='false'>(</mo><mi>L</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>≃</mo><mspace width='thickmathspace'></mspace><mi>𝒟</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mi>R</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \mathcal{C}(L(-),-)
   \;\simeq\;
   \mathcal{D}(-,R(-))
@@ -422,6 +422,14 @@ margin-left: 0em;
 </annotation></semantics></math></div></div>
 
 <p>(e.g. <a href='#Borceux94'>Borceux 94, Def. 6.7.1</a>)</p>
+
+<p>The 2-functor <math class='maruku-mathml' display='inline' id='mathml_d002da243731059d2b1e29b6640ba8a834240c34_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒱</mi></mrow><annotation encoding='application/x-tex'>\mathcal{V}</annotation></semantics></math>-<math class='maruku-mathml' display='inline' id='mathml_d002da243731059d2b1e29b6640ba8a834240c34_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Cat</mi><mo>→</mo><mi>Cat</mi></mrow><annotation encoding='application/x-tex'>Cat \rightarrow {Cat}</annotation></semantics></math> that sends an enriched category to its underlying ordinary category sends an enriched adjunction to an ordinary adjunction.</p>
+
+<h2 id='examples'>Examples</h2>
+
+<ul>
+<li>An adjunction enriched over truth values is a <a class='existingWikiWord' href='/nlab/show/Galois+connection'>Galois connection</a>.</li>
+</ul>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -454,14 +462,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on June  6, 2018 at 15:56:13.
+  Last revised on June  6, 2018 at 16:39:19.
   See the <a href="https://ncatlab.org/nlab/history/enriched adjunction" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/enriched+adjunction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/enriched+adjunction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/enriched+adjunction/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/enriched+adjunction" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/enriched+adjunction" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/enriched adjunction/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
