--- a/pages/1788.html
+++ b/pages/1788.html
@@ -322,18 +322,20 @@ margin-left: 0em;
 <p>to get this to actually center I added a CSS rule via with the Firefox extension Stylus</p>
 
 <p><code>div.cent table {margin-left: auto; margin-right: auto}</code></p>
+<table style='margin: auto; color: blue;'><thead><tr><th>column header 1</th><th>column header 2</th></tr></thead><tbody><tr><td style='text-align: left;'>item</td><td style='text-align: left;'>item</td></tr>
+</tbody></table>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on June  4, 2018 at 12:23:21.
+  Last revised on June  7, 2018 at 02:13:11.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1506" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1506 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1507" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1507 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
