--- a/pages/19061.html
+++ b/pages/19061.html
@@ -291,8 +291,9 @@ margin-left: 0em;
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8322/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8322/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -511,7 +512,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-supersymmetric QFT</a></p>
 </li>
 </ul>
 </li>
@@ -577,12 +578,12 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_916c78513dd720d8434f61446eac3191c8612999_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_061655a0e9e0f8f9701f999a3125a559fdc5d6e9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>What has come to be called <em>nonabelian T-duality</em> (<a href='#OssaQuevedo92'>Ossa-Quevedo 92</a>) <em>Poisson-Lie T-Duality</em> (due to <a href='#KlimcikSevera95'>Klimcik-Ševera 95</a>, <a href='#vonUnge02'>von Unge 02</a>) is a generalization of <a class='existingWikiWord' href='/nlab/show/T-duality'>T-duality</a> from <a class='existingWikiWord' href='/nlab/show/fiber+bundle'>fiber bundles</a> equipped with an <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian group</a> of <a class='existingWikiWord' href='/nlab/show/isometry'>isometries</a> (<a class='existingWikiWord' href='/nlab/show/torus'>torus</a> <a class='existingWikiWord' href='/nlab/show/bundle'>bundles</a>) to those with a <a class='existingWikiWord' href='/nlab/show/non-abelian+group'>nonabelian group</a> of isometries.</p>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_916c78513dd720d8434f61446eac3191c8612999_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_061655a0e9e0f8f9701f999a3125a559fdc5d6e9_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -624,21 +625,27 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>See also</p>
+
+<ul>
+<li id='FraserManolopoulosSfetsos18'>Benjo Fraser, Dimitrios Manolopoulos, <a class='existingWikiWord' href='/nlab/show/Konstadinos+Sfetsos'>Konstantinos Sfetsos</a>, <em>Non-Abelian T-duality and Modular Invariance</em> (<a href='https://arxiv.org/abs/1805.03657'>arXiv:1805.03657</a>)</li>
+</ul>
+
 <p>
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on April 12, 2018 06:39:16
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (129.12.18.176).
-  See <a href="https://ncatlab.org/nlab/author/David Corfield" style="color: #005c19">Author — David Corfield</a> for an overview of the nLab pages to which David Corfield has contributed.
+  <p>
+  Last revised on June  7, 2018 at 03:24:19.
+  See the <a href="https://ncatlab.org/nlab/history/Poisson-Lie T-duality" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Poisson-Lie+T-duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Poisson-Lie+T-duality/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Poisson-Lie+T-duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Poisson-Lie+T-duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-
+  <a href="/nlab/edit/Poisson-Lie+T-duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Poisson-Lie+T-duality/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Poisson-Lie+T-duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Poisson-Lie+T-duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Poisson-Lie T-duality/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
     <a href="/nlab/print/Poisson-Lie+T-duality" accesskey="p" id="view_print" rel="nofollow">Print</a>
