--- a/pages/2369.html
+++ b/pages/2369.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5920/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -663,10 +662,6 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/multiplicative+spectral+sequence'>multiplicative spectral sequence</a></p>
 </li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Gorenstein+ring+spectrum'>Gorenstein ring spectrum</a></p>
-</li>
 </ul>
 
 <h2 id='reference'>Reference</h2>
@@ -681,7 +676,7 @@ margin-left: 0em;
 </li>
 
 <li id='BrunerMayMcLureSteinberger86'>
-<p>R. Bruner, <a class='existingWikiWord' href='/nlab/show/Peter+May'>Peter May</a>, <a class='existingWikiWord' href='/nlab/show/James+McLure'>James McLure</a>, M. Steinberger, <em><math class='maruku-mathml' display='inline' id='mathml_d5ee506aaf08fecd24bc7834888809b6c0e450ce_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>H</mi> <mn>∞</mn></msub></mrow><annotation encoding='application/x-tex'>H_\infty</annotation></semantics></math>-Ring Spectra and their Applications</em>, Lecture Notes in Mathematics 1176, Springer 1986 (<a href='http://www.math.uchicago.edu/~may/BOOKS/h_infty.pdf'>pdf</a>)</p>
+<p>R. Bruner, <a class='existingWikiWord' href='/nlab/show/Peter+May'>Peter May</a>, <a class='existingWikiWord' href='/nlab/show/James+McLure'>James McLure</a>, M. Steinberger, <em><math class='maruku-mathml' display='inline' id='mathml_7a1a302e1766b5fb3ed684328c705f149d933568_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>H</mi> <mn>∞</mn></msub></mrow><annotation encoding='application/x-tex'>H_\infty</annotation></semantics></math>-Ring Spectra and their Applications</em>, Lecture Notes in Mathematics 1176, Springer 1986 (<a href='http://www.math.uchicago.edu/~may/BOOKS/h_infty.pdf'>pdf</a>)</p>
 </li>
 </ul>
 
@@ -695,7 +690,7 @@ margin-left: 0em;
 
 <ul>
 <li id='Schwede99'>
-<p><a class='existingWikiWord' href='/nlab/show/Stefan+Schwede'>Stefan Schwede</a>, <em>Stable homotopical algebra and <math class='maruku-mathml' display='inline' id='mathml_d5ee506aaf08fecd24bc7834888809b6c0e450ce_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Γ</mi></mrow><annotation encoding='application/x-tex'>\Gamma</annotation></semantics></math>-spaces</em>, Math. Proc. Camb. Phil. Soc. (1999), 126, 329 (<a href='http://www.math.uni-bonn.de/people/schwede/Gamma.pdf'>pdf</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Stefan+Schwede'>Stefan Schwede</a>, <em>Stable homotopical algebra and <math class='maruku-mathml' display='inline' id='mathml_7a1a302e1766b5fb3ed684328c705f149d933568_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Γ</mi></mrow><annotation encoding='application/x-tex'>\Gamma</annotation></semantics></math>-spaces</em>, Math. Proc. Camb. Phil. Soc. (1999), 126, 329 (<a href='http://www.math.uni-bonn.de/people/schwede/Gamma.pdf'>pdf</a>)</p>
 </li>
 
 <li id='Lawson09'>
@@ -776,19 +771,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June 15, 2017 12:21:51 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  <p>
+  Last revised on June  7, 2018 at 19:03:29.
+  See the <a href="https://ncatlab.org/nlab/history/ring spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/ring+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/ring+spectrum/36" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(36 revisions)</span> | <a href="/nlab/show/diff/ring+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/ring+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/ring+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/ring+spectrum/37" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(37 revisions)</span> | <a href="/nlab/show/diff/ring+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/ring+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/ring spectrum/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/ring+spectrum" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/ring+spectrum" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/ring+spectrum" id="view_source" rel="nofollow">Source</a>
