--- a/pages/16081.html
+++ b/pages/16081.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,7 +311,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a href='http://www.princeton.edu/~fraassen/'>homepage</a></p>
+<p><a href='http://www.basvanfraassen.org/'>homepage</a></p>
 </li>
 
 <li>
@@ -324,7 +323,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>B. van Fraassen, <em>Identity in Intensional Logic: Subjective Semantics</em> , pp.201-220 in Eco, Santambrogio, Violi (eds.), <em>Meaning and Mental Representations</em> , Indiana UP Bloomington 1988. (<a href='http://webware.princeton.edu/vanfraas/mss/SubjSemantics.pdf'>pdf</a>)</p>
+<p>B. van Fraassen, <em>Identity in Intensional Logic: Subjective Semantics</em> , pp.201-220 in Eco, Santambrogio, Violi (eds.), <em>Meaning and Mental Representations</em> , Indiana UP Bloomington 1988. (<a href='http://www.princeton.edu/~fraassen/abstract/SubjSemantics.pdf'>pdf</a>)</p>
 </li>
 
 <li>
@@ -336,19 +335,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on December 20, 2014 17:17:37 
-  by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
-  (127.0.0.1)
+  <p>
+  Last revised on June 11, 2018 at 09:46:09.
+  See the <a href="https://ncatlab.org/nlab/history/Bas van Fraassen" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bas+van+Fraassen" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/Bas+van+Fraassen" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bas+van+Fraassen/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Bas+van+Fraassen" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bas+van+Fraassen" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Bas van Fraassen/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Bas+van+Fraassen" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Bas+van+Fraassen" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Bas+van+Fraassen" id="view_source" rel="nofollow">Source</a>
